<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"> <!-- отображение выделения пунктов меню -->
        <item
            android:id="@+id/menu_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/menu_meds"
            android:icon="@drawable/ic_meds"
            android:title="@string/meds" />
        <item
            android:id="@+id/menu_report"
            android:icon="@drawable/ic_report"
            android:title="Отчёт: раздел недоступен" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>
