<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MedInfo"
    tools:showIn="@layout/activity_med_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="12dp"
            android:orientation="vertical">
            <TextView
                style="@style/MedInfoSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_time_title" >
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="каждый день">
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 раза в сутки" >
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 табл.">
            </TextView>
        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/info_block_instruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="12dp"
            android:orientation="vertical">
            <TextView
                style="@style/MedInfoSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insctructions" >
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_food_instruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="до еды">
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_add_insctruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="запивать водой">
            </TextView>
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/info_block_noncompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="12dp"
            android:orientation="vertical">
            <TextView
                style="@style/MedInfoSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Несовместимые" >
            </TextView>
            <TextView
                style="@style/MedInfoTextElements"
                android:id="@+id/info_nc_meds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ЛекарстваЛекарстваЛекарстваЛекарстваЛекарстваЛекарстваЛекарства">
            </TextView>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:text="@string/stop"
                android:theme="@style/Facebook.Button"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:text="@string/edit"
                android:theme="@style/Facebook.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/button" />
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
</ScrollView>
